# llm-gateway-backend

./: .gitignore  Dockerfile  README.md  ai_models_list.json  app-imager.sh  docker-compose.prod.yml  docker-compose.yml  docker-stack.yml  pyproject.toml
.github/workflows/: docker-image.yml  model_list_updater.yml
nginx/: nginx.conf
scripts/: ai_models_updater.py
src/: entrypoint.sh
src/ai_apps/: admin.py  apps.py  constants.py  data_models.py  enum.py  models.py  serializers.py  urls.py  views.py
src/ai_apps/migrations/: 0001_initial.py
src/authentication/: admin.py  models.py  permissions.py  serializers.py  urls.py  views.py
src/authentication/migrations/: 0001_initial.py  0002_authuser_is_staff.py  0003_apikey.py  0004_authuser_auth_provider.py  0005_alter_authuser_lastname_alter_authuser_username.py  0006_remove_authuser_lastname_valid_and_more.py  0007_apikey_name.py  0008_newsletter.py
src/authentication/templates/emails/: newsletter_thank_you.html
src/base/: enum.py  models.py
src/main/: email.py  settings.py  urls.py
src/provider/: admin.py  constants.py  helpers.py  models.py  serializers.py  urls.py  utils.py  views.py
src/provider/chat/: __init__.py  base.py  enum.py  factory.py  groq.py
src/provider/generate/: base.py  enum.py  factory.py  huggingface.py  litellm.py  ola_krutrim.py
src/provider/generate/data/: litellm_models_list.json  models_list.json
src/provider/migrations/: 0001_initial.py
